--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-<div id="test"></div>
-<div id="test2"></div>
-<div id="test3"></div>
+<div id="show"></div>
+
 <script src="main.js"></script>
 </body>
 </html>
