--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Javascript</title>
 </head>
 <body>
-<div id="show"></div>
 
-<script src="main.js"></script>
+    <div id="show"></div>
+    <div id="show2"></div>
+    <div id="show3"></div>
+
+    <script src="main.js"></script>
+
 </body>
 </html>
